--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yehjuneheo-portfolio",
-  "homepage": "",
+  "homepage": "https://yehjuneheo.com",
   "version": "1.5.0",
   "private": true,
   "dependencies": {
